--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script type="text/javascript" src="src/index.js"></script>
   </head>
   <body>
-
+    <div id='mushroom-collection'>
+    </div>
   </body>
 </html>
