here ya go mannnn

--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="src/index.js"></script>
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <div id='mushroom-collection'>
+    <h1 class="center">MUSHROOMROOM</h1>
+    <div id='mushroom-collection' class='flex center font'>
     </div>
   </body>
 </html>
