added form, testing functionality of form

--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,73 @@
     <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <h1 class="center">MUSHROOMROOM</h1>
+    <h1 class="center">MUSHROOM ROOM</h1>
     <div id='mushroom-collection' class='flex center font'>
     </div>
+
+
+    <div class="New Mushroom">
+      <h2>New Mushroom Form:</h2>
+      <form id="new-mushroom-form">
+        <h4><label> Information </label></h4>
+        <label>Common Name:</label>
+        <input type="text" name="common_name" id="mushroom-common-name">
+        <br/>
+        <label>Latin Name:</label>
+        <input type="text" name="latin_name" id="mushroom-latin-name">
+        <br/>
+        <label>Habitat:</label>
+        <input type="text" name="habitat" id="mushroom-habitat">
+        <br/>
+        <label>Region:</label>
+        <input type="text" name="region" id="mushroom-region">
+        <br/>
+        <label>Fairy Rings:</label>
+        <input type="text" name="fairy_ring" id="mushroom-fairy-ring">
+        <br/>
+        <br/>
+        <label>Often Confused With:</label>
+        <input type="text" name="confused_with" id="mushroom-confused-with">
+        <br/>
+        <h4><label>Characteristics  </label></h4>
+        <label>Psychoactive:</label>
+        <input type="text" name="psychoactive" id="mushroom-psychoactive">
+        <br/>
+        <label>Poisonous:</label>
+        <input type="text" name="poisonous" id="mushroom-poisonous">
+        <br/>
+        <label>Deadly:</label>
+        <input type="text" name="deadly" id="mushroom-deadly">
+        <br/>
+        <label>Cap:</label>
+        <input type="text" name="cap" id="mushroom-cap">
+        <br/>
+        <label>Hymenium:</label>
+        <input type="text" name="hymenium" id="mushroom-hymenium">
+        <br/>
+        <label>Spore Print:</label>
+        <input type="text" name="spore_print" id="mushroom-spore-print">
+        <br/>
+        <label>Ecology:</label>
+        <input type="text" name="ecology" id="mushroom-ecology">
+        <br/>
+        <h4> Image Url (Optional) </h4>
+        <label>Url:</label>
+        <input type="text" name="url" id="mushroom-url">
+
+
+
+
+        <input type="submit" value="Create Mushroom"></input>
+      </form>
+    </div>
+
+
+
+
+
+
+
+
   </body>
 </html>
