--- a/website/index.html
+++ b/website/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
     <script type="text/javascript" src="src/index.js"></script>
     <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <h1 class="center">MUSHROOM ROOM</h1>
+    <h1 class="center text-warning">MUSHROOM ROOM</h1>
     <div id='mushroom-collection' class='flex center font'>
     </div>
 
 
-    <div class="New Mushroom">
+    <div  class="New Mushroom">
       <h2>New Mushroom Form:</h2>
       <form id="new-mushroom-form">
         <h4><label> Information </label></h4>
